--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
                         </div>
                     </div>
                 </div>
+                <img class="img-fluid" src="img/rewards.png">
+                <img class="img-fluid" src="img/fav.png">
             </div>
         </section>
     </header>
