revisi margin dan layout

--- a/index.html
+++ b/index.html
@@ -15,34 +15,36 @@
     <nav class="navbar navbar-expand-lg fixed-top border-bottom">
         
         <div class="row">
-            <div class="col-12 d-flex flex-wrap justify-content-between align-items-center">
-                <div class="container d-flex flex-wrap justify-content-center align-items-center">
-                    <div class="col-md-3 col-3 align-items-center justify-content-center">
-                        <div class="row d-flex flex-wrap justify-content-center align-items-center">
-                            <button type="button" style="color: #FFFFFF; font-weight: 500;" class="btn btn-idr">IDR
-                                <i class="fa-solid fa-chevron-down" style="color: #F2E3D5;"></i>
-                            </button>
-                            <button type="button" style="color: #000000; font-weight: 500;" class="btn btn-language ms-4">
-                                <img class="img-fluid me-1" src="img/language.png">
-                                Eng
-                            </button>
-                        </div>
-                    </div>
-                    <div class="col-md-5 col-5">
-                        <div class="row d-flex flex-wrap justify-content-center align-items-center"">
-                            <img class="img-fluid" src="img/bold-logo.png">
-                        </div>
-                    </div>
-                    <div class="col-md-4 col-4">
-                        <div class="row d-flex flex-wrap justify-content-center align-items-center">
-                            <div class="circle-icon">
-                                <img class="img-fluid text-center" src="img/search-normal.png">
+            <div class="container" id="first-nav">
+                <div class="col-12 d-flex flex-wrap justify-content-between align-items-center mt-4">
+                    <div class="container d-flex flex-wrap justify-content-center align-items-center">
+                        <div class="col-md-3 col-3 align-items-center justify-content-center">
+                            <div class="row d-flex flex-wrap justify-content-center align-items-center">
+                                <button type="button" style="color: #FFFFFF; font-weight: 500;" class="btn btn-idr">IDR
+                                    <i class="fa-solid fa-chevron-down" style="color: #F2E3D5;"></i>
+                                </button>
+                                <button type="button" style="color: #000000; font-weight: 500;" class="btn btn-language ms-4">
+                                    <img class="img-fluid me-1" src="img/language.png">
+                                    Eng
+                                </button>
                             </div>
-                            <div class="circle-icon mx-4">
-                                <img class="img-fluid text-center" src="img/bag-icon.png">
+                        </div>
+                        <div class="col-md-5 col-5">
+                            <div class="row d-flex flex-wrap justify-content-center align-items-center"">
+                                <img class="img-fluid" src="img/bold-logo.png">
                             </div>
-                            <button type="button" class="btn btn-log" style="color: #3F362C; font-weight: 500;">Login</button>
-                            <button type="button" class="btn btn-sign ms-3" style="color: #3D342D; font-weight: 500;">Sign Up</button>
+                        </div>
+                        <div class="col-md-4 col-4">
+                            <div class="row d-flex flex-wrap justify-content-center align-items-center">
+                                <div class="circle-icon">
+                                    <img class="img-fluid text-center" src="img/search-normal.png">
+                                </div>
+                                <div class="circle-icon mx-4">
+                                    <img class="img-fluid text-center" src="img/bag-icon.png">
+                                </div>
+                                <button type="button" class="btn btn-log" style="color: #3F362C; font-weight: 500;">Login</button>
+                                <button type="button" class="btn btn-sign ms-3" style="color: #3D342D; font-weight: 500;">Sign Up</button>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -92,7 +94,7 @@
                         with our hijabs</h1>
                     <div class="col-lg-6 mx-auto">
                         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                            <button type="button" class="btn btn-primary" style="color: #FFF; font-weight: 700;">Shop Now</button>
+                            <button type="button" class="btn btn-shop" style="color: #FFF; font-weight: 700;">Shop Now</button>
                         </div>
                     </div>
                 </div>
@@ -109,7 +111,7 @@
         <section class="content" id="product">
             <div class="container">
                 <div class="row d-flex justify-content-between align-items-center">
-                    <h2 class="text-center mt-5">Zada Kheir Product</h2>
+                    <h1 class="text-center mt-5" style="color: #956138; font-weight: 600;">Zada Kheir Product</h1>
                 </div>
                 <div class="row d-flex justify-content-between align-items-center">
                     <div class="col-md-3">
@@ -186,7 +188,7 @@
                     </div>
                 </div>
                 <div class="text-center my-5">
-                    <a href="#" class="btn btn-primary" style="color: #FFF; font-weight: 700;">View All Product</a>
+                    <a href="#" class="btn btn-product" style="color: #FFF; font-weight: 700;">View All Product</a>
                 </div>
             </div>
         </section>
@@ -196,7 +198,7 @@
         <section class="content" id="about">
             <div class="container">
                 <div class="row d-flex justify-content-between align-items-center">
-                    <h2 class="text-center my-5">About Us</h2>
+                    <h1 class="text-center my-5" style="color: #956138; font-weight: 600;">ABOUT US</h1>
                 </div>
                 <div class="row d-flex justify-content-between align-items-center">
                     <div class="col-md-6">
@@ -214,7 +216,7 @@
                         <div class="row d-flex justify-content-between align-items-between">
                             <img class="img-fluid mb-3 img-log" src="img/about-log.png">
                         </div>
-                        <h6 class="my-5">
+                        <h6 class="my-5" style="color: #956138; font-weight: 500;">
                             Tidak hanya dibuat untuk menutupi kita. Kami memakainya untuk
                             menunjukkan bagaimana perasaan kami, siapa kami sebagai
                             pribadi. Untuk mengekspresikan nilai-nilai batin kita. <br> <br>
@@ -236,7 +238,7 @@
         <section class="content" id="tagline">
             <div class="container">
                 <div class="row d-flex justify-content-center align-items-center">
-                    <h2 class="text-center mt-5">We Offer You <br> The Best Seller</h2>
+                    <h1 class="text-center mt-5" style="color: #956138; font-weight: 600;">We Offer You <br> The Best Seller</h1>
                 </div>
             </div>
         </section>
@@ -244,7 +246,7 @@
         <section class="content" id="buying">
             <div class="container">
                 <div class="row d-flex justify-content-between align-items-center">
-                    <div class="col-md-2">
+                    <div class="col-md-2 col-12">
                         <img class="img-fluid" src="img/buy2.png" data-aos="fade-up">
                         <img class="img-fluid my-3" src="img/buy.png" data-aos="fade-up">
                         <img class="img-fluid" src="img/buy.png" data-aos="fade-up">
@@ -271,13 +273,13 @@
                         </div>
                     </div>
                     <div class="col-md-5">
-                        <h6 style="color: #774C29; font-weight: 500;">Zada Kheir</h6>
-                        <h6 style="color: #5A381C; font-weight: 700;">DRESS FELISIA PURPLE - SERIES B</h6>
-                        <p style="color: #774C29; font-weight: 500;">Description</p>
-                        <p style="color: #956138; font-weight: 500;">Material: Premium Valerie interlock, bahan nya nyaman,
+                        <h5 style="color: #774C29; font-weight: 500;">Zada Kheir</h5>
+                        <h5 style="color: #5A381C; font-weight: 700;">DRESS FELISIA PURPLE - SERIES B</h5>
+                        <h6 style="color: #774C29; font-weight: 500;">Description</h6>
+                        <h6 style="color: #956138; font-weight: 500;">Material: Premium Valerie interlock, bahan nya nyaman,
                             jahitan nya rapi, model nya simple dan elegan.. tetep
                             cantik dan menawan.
-                        </p>
+                        </h6>
                         <div class="row d-flex justify-content-between align-items-center" id="price">
                             <div class="col-md-5 col-5" style="color: #774C29; font-weight: 700;">
                                 Rp 195.000
@@ -294,8 +296,8 @@
                                 <i class="fa-solid fa-star" style="color: #DBCCBD"></i>
                             </div>
                         </div>
-                        <p style="color: #774C29; font-weight: 700;">Select Hijab Size</p>
-                        <div class="row d-flex justify-content-between align-items-center">
+                        <h6 style="color: #774C29; font-weight: 600;">Select Hijab Size</h6>
+                        <div class="row d-flex justify-content-center align-items-center">
                             <div class="col">
                                 <img class="img-fluid" src="img/size1.png">
                             </div>
@@ -312,10 +314,10 @@
                                 <img class="img-fluid" src="img/size5.png">
                             </div>
                         </div>
-                        <p style="color: #774C29; font-weight: 700;">Select Hijab Size</p>
+                        <h6 style="color: #774C29; font-weight: 600;">Select Hijab Size</h6>
 
                         <!-- Button Add -->
-                        <div class="row d-flex align-items-center">
+                        <div class="row d-flex justify-content-between align-items-center">
                             <div class="col-md-5">
                                 <div class="row d-flex justify-content-between align-items-center mb-3">
                                     <div class="col-md-4 col-4">
@@ -327,8 +329,8 @@
                                         <h3 class="text-center" style="color: #5A381C; font-weight: 500;">2</h3>
                                     </div>
                                     <div class="col-md-4 col-4">
-                                        <button type="submit" class="btn btn-add" style="color: #292D32;">
-                                            <i class="fa-solid fa-plus text-center"></i>
+                                        <button type="submit" class="btn btn-add text-center" style="color: #292D32;">
+                                            <i class="fa-solid fa-plus"></i>
                                         </button>
                                     </div>
                                 </div>
@@ -365,7 +367,7 @@
         <section class="content" id="customer">
             <div class="container">
                 <div class="row d-flex justify-content-center align-items-center">
-                    <h2 class="text-center mt-5">LET CUSTOMER SPEAK FOR US</h2>
+                    <h1 class="text-center mt-5" style="color: #956138; font-weight: 600;">LET CUSTOMER SPEAK FOR US</h1>
                 </div>
                 <div class="row d-flex justify-content-center align-items-center">
                     <div class="col-md-4">
@@ -446,7 +448,7 @@
         <section class="content" id="tagline">
             <div class="container">
                 <div class="row d-flex justify-content-center align-items-center">
-                    <h2 class="text-center my-5" style="font-weight: 500;">Support Zada Kheir</h2>
+                    <h2 class="text-center my-5" style="font-weight: 400;">Support Zada Kheir</h2>
                 </div>
             </div>
         </section>
@@ -513,7 +515,7 @@
                         </div>
                         <div class="col-lg-4 col-md-4 col-5">
                             <h5 class="text-left" style="color: #956138; font-weight: 500;">Quick Links</h5>
-                            <ul class="vertical">
+                            <ul class="vertical mb-5">
                                 <li><a class="nav-link" href="#">Konfirmasi Pembayaran</a></li>
                                 <li><a class="nav-link" href="#">Tentang Kami</a></li>
                                 <li><a class="nav-link" href="#">Kontak Kami</a></li>
