--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         
         <div class="row">
             <div class="container" id="first-nav">
-                <div class="col-12 d-flex flex-wrap justify-content-between align-items-center mt-4">
+                <div class="col-12 d-flex flex-wrap justify-content-center align-items-center mt-4">
                     <div class="container d-flex flex-wrap justify-content-center align-items-center">
                         <div class="col-md-3 col-3 align-items-center justify-content-center">
                             <div class="row d-flex flex-wrap justify-content-center align-items-center">
@@ -89,7 +89,7 @@
         <section class="content" id="home" style="background-image: url(img/hero.png);">
             <div class="container">
                 <div class="px-4 py-5 my-5 text-center">
-                    <h1 style="color: #5A381C; font-weight: 400; font-size: 64px;" data-aos="zoom-in-up">Wrap
+                    <h1 style="color: #5A381C; font-weight: 400;" data-aos="zoom-in-up">Wrap
                         <span style="color: #FFB880; font-weight: 600;">yourself in <br> elegance</span>
                         with our hijabs</h1>
                     <div class="col-lg-6 mx-auto">
@@ -114,7 +114,7 @@
                     <h1 class="text-center mt-5" style="color: #956138; font-weight: 600;">Zada Kheir Product</h1>
                 </div>
                 <div class="row d-flex justify-content-between align-items-center">
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-6">
                         <div class="content-product">
                             <div class="row">
                                 <img class="img-fluid" src="img/product.png">
@@ -132,7 +132,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-6">
                         <div class="content-product">
                             <div class="row">
                                 <img class="img-fluid" src="img/product.png">
@@ -150,7 +150,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-6">
                         <div class="content-product">
                             <div class="row">
                                 <img class="img-fluid" src="img/product.png">
@@ -168,7 +168,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-6">
                         <div class="content-product">
                             <div class="row">
                                 <img class="img-fluid" src="img/product.png">
@@ -246,7 +246,7 @@
         <section class="content" id="buying">
             <div class="container">
                 <div class="row d-flex justify-content-between align-items-center">
-                    <div class="col-md-2 col-12">
+                    <div class="col-md-2 col-12 img-choose">
                         <img class="img-fluid" src="img/buy2.png" data-aos="fade-up">
                         <img class="img-fluid my-3" src="img/buy.png" data-aos="fade-up">
                         <img class="img-fluid" src="img/buy.png" data-aos="fade-up">
@@ -369,8 +369,8 @@
                 <div class="row d-flex justify-content-center align-items-center">
                     <h1 class="text-center mt-5" style="color: #956138; font-weight: 600;">LET CUSTOMER SPEAK FOR US</h1>
                 </div>
-                <div class="row d-flex justify-content-center align-items-center">
-                    <div class="col-md-4">
+                <div class="row d-flex justify-content-between align-items-center">
+                    <div class="col-md-4 col-6">
                         <div class="content-customer">
                             <img class="img-fluid" src="img/review.png">
                             <p class="mt-4" style="color: #774C29; font-weight: 500;">Bainar Multicolour Dress</p>
@@ -390,7 +390,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-6">
                         <div class="content-customer">
                             <img class="img-fluid" src="img/review.png">
                             <p class="mt-4" style="color: #774C29; font-weight: 500;">Bainar Multicolour Dress</p>
@@ -410,7 +410,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-6">
                         <div class="content-customer">
                             <img class="img-fluid" src="img/review.png">
                             <p class="mt-4" style="color: #774C29;">Bainar Multicolour Dress</p>
@@ -432,13 +432,15 @@
                     </div>
 
                     <!-- Button -->
-                    <input type="checkbox" id="switch" class="checkbox" />
-                    <label for="switch" class="toggle">
-                    <p>
-                        <p href="#" class="fa-solid fa-arrow-left" style="color: #fff"></p>
-                        <p href="#" class="fa-solid fa-arrow-right ms-5" style="color: #fff"></p>
-                    </p>
-                    </label>
+                    <div class="row justify-content-center">
+                        <input type="checkbox" id="switch" class="checkbox" />
+                        <label for="switch" class="toggle">
+                            <p>
+                                <p href="#" class="fa-solid fa-arrow-left" style="color: #fff"></p>
+                            <p href="#" class="fa-solid fa-arrow-right ms-5" style="color: #fff"></p>
+                            </p>
+                        </label>
+                    </div>
                 </div>
             </div>
         </section>
